Added put to add a cart directly with a list of products. Some changes to the testing scripts generateProducts.js and simulateCartActivity.js to reflect new directories.

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -39,5 +39,6 @@
         </table>
     </div>
 {{else}}
-    <p>Your cart is empty.</p>
+    <p class="make-it-white make-it-center">Your cart is empty.</p>
+    <p class="make-it-white make-it-center">Go to <a class="make-it-white" href="/products"><b>/products</b></a> to start adding</p>
 {{/if}}
