--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -67,25 +67,26 @@
                             <p><b>PUT /api/products/pid - </b> Modifica un registro existente por ID único.</p>
                             <p><b>DELETE /api/products/pid - </b> Marca como eliminado o elimina un registro. Usa el parámetro booleano en body <b>killFlag</b> para cambiar el comportamiento.</p>
                             <p><b>GET /api/carts/ - </b> Devuelve todos los carritos disponibles con la información de cada producto.</p>
-                            <p><b>POST /api/carts/ - </b> Crea un nuevo carrito con un ID único y retorna su ID.</p>
+                            <p><b>POST /api/carts/ - </b> Crea un nuevo carrito con un ID único y retorna su ID. Si se le pasan parametros por body crea un carro con los productos indicados.</p>
                             <p><b>GET /api/carts/cid - </b> Lista los contenidos del carrito por ID (cid) con información agregada de los productos en este.</p>
+                            <p><b>DELETE /api/carts/cid - </b> Elimina todos los contenidos del carrito por cid.</p>
                             <p><b>POST /api/carts/cid/product/pid - </b> Agrega el producto con el pid pasado o incrementa su cantidad en el carrito con el cid pasado.</p>
                             <p><b>PATCH /api/carts/cid/product/pid - </b> Modifica el campo quantity de un producto en un carrito. Usa el valor pasado por body con la key 'quantity'.</p>
                             <p><b>DELETE /api/carts/cid/product/pid - </b> Elimina el producto con el pid pasado del carrito pasado por pid.</p>
-                            <p><b>DELETE /api/carts/cid - </b> Elimina todos los contenidos del carrito por cid.</p>
+                            
                             
                         </div>
                         
                         <div class="column is-6 section">
                             <p class="make-it-normal">Vistas</p>
                             <p><b>/</b> - Esta página.</p>
-                            <p><b>/products</b> - Catálogo de productos completo.</p>
-                            <p><b>/carts</b> - Vista estática de todos los carritos en el servidor.</p>
-                            <p><b>/carts/cid</b> - Vista del carrito por ID.</p>
-                            <p><b>/realtime/products</b> - Vista en tiempo real de la colección de objetos en 'products'.</p>
-                            <p><b>/realtime/carts</b> - Vista en tiempo real de la colección de objetos en 'carts' sin detalle por producto (solo PID y cantidad).</p>
-                            <p><b>/forms/add-product</b> - Formulario para testear la habilidad de agregar un producto a la base de datos.</p>
-                            <p><b>/forms/delete-product</b> - Formulario para testear la habilidad de eliminar un producto de la base de datos.</p>
+                            <p><a href="/products" class="make-it-white"><b>/products</b> - Catálogo de productos completo.</p></a>
+                            <p><a href="/carts" class="make-it-white"><b>/carts</b></a> - Vista estática de todos los carritos en el servidor.</p>
+                            <p><a href="/carts/5ab6e82f-b289-4dff-8ff5-25dc0f749ee2" class="make-it-white"><b>/carts/cid</b></a> - Vista del carrito por ID.</p>
+                            <p><a href="/realtime/products" class="make-it-white"><b>/realtime/products</b></a> - Vista en tiempo real de la colección de objetos en 'products'.</p>
+                            <p><a href="/realtime/carts" class="make-it-white"><b>/realtime/carts</b></a> - Vista en tiempo real de la colección de objetos en 'carts' sin detalle por producto (solo PID y cantidad).</p>
+                            <p><a href="/forms/add-product" class="make-it-white"><b>/forms/add-product</b></a> - Formulario para testear la habilidad de agregar un producto a la base de datos.</p>
+                            <p><a href="/forms/delete-product" class="make-it-white"><b>/forms/delete-product</b></a> - Formulario para testear la habilidad de eliminar un producto de la base de datos.</p>
                         </div>
                     </div>
                 </div>
