--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -13,11 +13,11 @@
     <!-- Main Content Section -->
     <section class="section make-it-normal">
         <div class="container">
-            <div class="make-it-rounded make-it-semi-back make-it-normal make-it-center">
-                <p class="card-title-container make-it-white make-it-dark-back">De qué se trata este proyecto</p>
+            <div class="make-it-rounded make-it-semi-back make-it-normal make-it-left">
+                <p class="card-title-container make-it-white make-it-dark-back">Sobre este proyecto</p>
                 <br>
-                <p class="section">
-                    El proyecto consiste en un backend para una tienda de modelos de trenes llamada 'Shopnhour'. 
+                <p class="section make-it-small">
+                    El proyecto consiste en un backend para una tienda ficticia llamada 'Shopnhour' que vende modelos de trenes. 
                     Integra una base de datos (Mongo) sobre Node y Express para montar un servicio de backend que 
                     provee un catálogo de productos y la gestión de carritos de compras. El catálogo de productos 
                     es almacenado en Mongo en la colección 'products' y los carritos en la colección 'carts'.
@@ -26,15 +26,10 @@
             </div>
 
             <div class="columns is-multiline section">
-                <div class="column is-12 make-it-white make-it-small">
-                    <p>Alumno: Ernesto AC</p>
-                    <p>Proyecto de Programación Backend I: Desarrollo Avanzado de Backend, comisión 70470</p>
-                </div>
-                <br>
-
                 <div class="column is-6 make-it-white">
-                    <p class="card-title-container make-it-dark make-it-rounded-top make-it-semi-back">Navegación y uso</p>
-                    <div class="section">
+                    <p class="card-title-container make-it-semi make-it-rounded-top make-it-dark-back">> Navegación y uso</p>
+                    <div class="section make-it-semi-back make-it-dark make-it-rounded-bottom">
+                        <br>
                         <p class="make-it-small">
                             El proyecto comienza con esta página y provee una barra de navegación para moverse 
                             por algunas de las operaciones básicas: Lista de productos y el carrito predeterminado 
@@ -42,25 +37,42 @@
                         </p>
                         <br>
                         <p>Consideraciones:</p>
-                        <li class="make-it-small"> 
-                            El proyecto no implementa sesiones ni autenticación aún, por tanto el carrito al que agregamos productos desde este front end está hardcodeado en 
-                            <b>5ab6e82f-b289-4dff-8ff5-25dc0f749ee2</b> (carrito preexistente en Mongo).
-                        </li>
-                        <li class="make-it-small"> 
-                            El botón <div class="button is-small is-warning make-it-small">Add to Cart</div> en la vista de 
-                            <a class="make-it-semi" href="/products">/products </a> está hardcodeado para agregar productos al carrito mencionado arriba.
-                        </li>
-                        <li class="make-it-small"> 
-                            En la sección <a class="make-it-semi" href="/more">/more </a> hay vistas extra no incluidas en la barra de navegación, principalmente para testing.
-                        </li>
+                        
+                        <div class="section">
+                            <li class="make-it-small"> 
+                                El proyecto no implementa sesiones ni autenticación aún, por tanto el carrito al que agregamos productos desde este front end está hardcodeado en 
+                                <b>5ab6e82f-b289-4dff-8ff5-25dc0f749ee2</b> (carrito preexistente en Mongo).
+                            </li>
+                            <li class="make-it-small"> 
+                                El botón <div class="button is-small is-warning make-it-small">Add to Cart</div> en la vista de 
+                                <a class="make-it-semi" href="/products">/products </a> está hardcodeado para agregar productos al carrito mencionado arriba.
+                            </li>
+                        </div>
+
                     </div>
                 </div>
 
                 <div class="column is-6 make-it-white">
-                    <p class="card-title-container make-it-dark make-it-rounded-top make-it-semi-back">Rutas</p>
-                    <div class="make-it-small columns make-it-white">
-                        <div class="column is-6 section make-it-rounded">
+                    <p class="card-title-container make-it-semi make-it-rounded-top make-it-dark-back">> Rutas</p>
+                    <div class="make-it-small make-it-dark make-it-rounded-bottom make-it-semi-back">
+
+                        <div class="section">
+                            <br>
+                            <p class="make-it-normal">Vistas</p>
+                            <br>
+                            <p><b>/</b> - Esta página.</p>
+                            <p><a href="/products" class="make-it-dark"><b>/products</b> - Catálogo de productos completo.</p></a>
+                            <p><a href="/carts" class="make-it-dark"><b>/carts</b></a> - Vista estática de todos los carritos en el servidor.</p>
+                            <p><a href="/carts/5ab6e82f-b289-4dff-8ff5-25dc0f749ee2" class="make-it-dark"><b>/carts/cid</b></a> - Vista del carrito por ID.</p>
+                            <p><a href="/realtime/products" class="make-it-dark"><b>/realtime/products</b></a> - Vista en tiempo real de la colección de objetos en 'products'.</p>
+                            <p><a href="/realtime/carts" class="make-it-dark"><b>/realtime/carts</b></a> - Vista en tiempo real de la colección de objetos en 'carts' sin detalle por producto (solo PID y cantidad).</p>
+                            <p><a href="/forms/add-product" class="make-it-dark"><b>/forms/add-product</b></a> - Formulario para testear la habilidad de agregar un producto a la base de datos.</p>
+                            <p><a href="/forms/delete-product" class="make-it-dark"><b>/forms/delete-product</b></a> - Formulario para testear la habilidad de eliminar un producto de la base de datos.</p>
+                        </div>
+
+                        <div class="section make-it-rounded">
                             <p class="make-it-normal">API endpoints</p>
+                            <br>
                             <p><b>GET /api/products/ - </b> Trae todos los datos de la colección 'products' en Mongo en modo paginado.</p>
                             <p><b>GET /api/products/pid - </b> Trae un producto por su ID único, pid.</p>
                             <p><b>POST /api/products/ - </b> Crea un producto usando los parámetros pasados en el body del request con un ID único.</p>
@@ -74,21 +86,15 @@
                             <p><b>PATCH /api/carts/cid/product/pid - </b> Modifica el campo quantity de un producto en un carrito. Usa el valor pasado por body con la key 'quantity'.</p>
                             <p><b>DELETE /api/carts/cid/product/pid - </b> Elimina el producto con el pid pasado del carrito pasado por pid.</p>
                             
-                            
+                            <br>
                         </div>
                         
-                        <div class="column is-6 section">
-                            <p class="make-it-normal">Vistas</p>
-                            <p><b>/</b> - Esta página.</p>
-                            <p><a href="/products" class="make-it-white"><b>/products</b> - Catálogo de productos completo.</p></a>
-                            <p><a href="/carts" class="make-it-white"><b>/carts</b></a> - Vista estática de todos los carritos en el servidor.</p>
-                            <p><a href="/carts/5ab6e82f-b289-4dff-8ff5-25dc0f749ee2" class="make-it-white"><b>/carts/cid</b></a> - Vista del carrito por ID.</p>
-                            <p><a href="/realtime/products" class="make-it-white"><b>/realtime/products</b></a> - Vista en tiempo real de la colección de objetos en 'products'.</p>
-                            <p><a href="/realtime/carts" class="make-it-white"><b>/realtime/carts</b></a> - Vista en tiempo real de la colección de objetos en 'carts' sin detalle por producto (solo PID y cantidad).</p>
-                            <p><a href="/forms/add-product" class="make-it-white"><b>/forms/add-product</b></a> - Formulario para testear la habilidad de agregar un producto a la base de datos.</p>
-                            <p><a href="/forms/delete-product" class="make-it-white"><b>/forms/delete-product</b></a> - Formulario para testear la habilidad de eliminar un producto de la base de datos.</p>
-                        </div>
                     </div>
+                    
+                </div>
+                <div class="column is-12 make-it-semi make-it-small make-it-center section">
+                    <br>
+                    <p>Ernesto AC - <b>Proyecto de Programación Backend I: Desarrollo Avanzado de Backend, comisión 70470</b></p>
                 </div>
             </div>
         </div>
