Old views "statics" removed from project as they are not needed anymore.

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -17,7 +17,7 @@
                 <p class="card-title-container make-it-white make-it-dark-back">Sobre este proyecto</p>
                 <br>
                 <p class="section make-it-small">
-                    El proyecto consiste en un backend para una tienda ficticia llamada 'Shopnhour' que vende modelos de trenes. 
+                    El proyecto consiste en un backend para una tienda ficticia llamada <b>'Shopnhour'</b> que vende modelos de trenes. 
                     Integra una base de datos (Mongo) sobre Node y Express para montar un servicio de backend que 
                     provee un catálogo de productos y la gestión de carritos de compras. El catálogo de productos 
                     es almacenado en Mongo en la colección 'products' y los carritos en la colección 'carts'.
@@ -45,7 +45,7 @@
                             </li>
                             <li class="make-it-small"> 
                                 El botón <div class="button is-small is-warning make-it-small">Add to Cart</div> en la vista de 
-                                <a class="make-it-semi" href="/products">/products </a> está hardcodeado para agregar productos al carrito mencionado arriba.
+                                <a class="make-it-darj" href="/products"><b>/products</b> </a> está hardcodeado para agregar productos al carrito mencionado arriba.
                             </li>
                         </div>
 
