--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -65,7 +65,7 @@
                             <p><a href="/carts" class="make-it-dark"><b>/carts</b></a> - Vista estática de todos los carritos en el servidor.</p>
                             <p><a href="/carts/5ab6e82f-b289-4dff-8ff5-25dc0f749ee2" class="make-it-dark"><b>/carts/cid</b></a> - Vista del carrito por ID.</p>
                             <p><a href="/realtime/products" class="make-it-dark"><b>/realtime/products</b></a> - Vista en tiempo real de la colección de objetos en 'products'.</p>
-                            <p><a href="/realtime/carts" class="make-it-dark"><b>/realtime/carts</b></a> - Vista en tiempo real de la colección de objetos en 'carts' sin detalle por producto (solo PID y cantidad).</p>
+                            <p><a href="/realtime/carts" class="make-it-dark"><b>/realtime/carts</b></a> - Vista en tiempo real de la colección de objetos en 'carts' sin detalle por producto (sólo PID y cantidad).</p>
                             <p><a href="/forms/add-product" class="make-it-dark"><b>/forms/add-product</b></a> - Formulario para testear la habilidad de agregar un producto a la base de datos.</p>
                             <p><a href="/forms/delete-product" class="make-it-dark"><b>/forms/delete-product</b></a> - Formulario para testear la habilidad de eliminar un producto de la base de datos.</p>
                         </div>
