JWT session testing

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">Proyecto de Programación Backend I</h2>
+    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">Proyecto de Programación Backend II</h2>
 
     <!-- Main Content Section -->
     <section class="section make-it-normal">
@@ -94,7 +94,7 @@
                 </div>
                 <div class="column is-12 make-it-semi make-it-small make-it-center section">
                     <br>
-                    <p>Ernesto AC - <b>Proyecto de Programación Backend I: Desarrollo Avanzado de Backend, comisión 70470</b></p>
+                    <p>Ernesto AC - <b>Proyecto de Programación Backend II: Desarrollo Avanzado de Backend, comisión 70460</b></p>
                 </div>
             </div>
         </div>
