--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -124,9 +124,9 @@
                                 <div class="make-it-dark make-it-small section make-it-center">PID: {{this.pid}}</div>
 
 
-                                <div class="make-it-right section">
+{{!--                                 <div class="make-it-right section">
                                     <button class="button make-it-small is-warning" onclick="document.getElementById('addToCartForm-{{this.pid}}').submit();">Add to cart</button>
-                                </div>
+                                </div> --}}
                             </div>
                         </div>
                     {{/each}}
