--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -28,16 +28,16 @@
     <h1>Login</h1>
 
     <form id="loginForm">
-        <label for="email">Email:</label>
+        <label class="make-it-white" for="email">Email:</label>
         <input name="email" type="email" required />
 
-        <label for="password">Password:</label>
+        <label class="make-it-white" for="password">Password:</label>
         <input name="password" type="password" required />
 
         <button type="submit">Login</button>
     </form>
 
-    <div id="message"></div>
+    <div class="make-it-white" id="message"></div>
 
     <script>
         const form = document.getElementById("loginForm");
